# erdos-volatility-hedging-wu-zhang

./: .gitignore  COMPLETION_NOTES.md  README.md  pyproject.toml  requirements.txt
docs/: detailed_results.md  research_pipeline.md
examples/: run_real_market_pipeline.py  run_synthetic_pipeline.py
notebooks/: 01_end_to_end_demo.ipynb  02_market_signal_adjusted_delta_demo.ipynb  03_real_market_msa_delta_backtest.ipynb
outputs/: market-signal-delta-hedging-5min.pptx  market-signal-delta-hedging-beamer.tex  market-signal-delta-hedging-executive-summary.tex
src/option_hedging/: __init__.py
src/option_hedging/backtesting/: __init__.py  episodes.py
src/option_hedging/data/: __init__.py  market_data.py
src/option_hedging/derivatives/: __init__.py  black_scholes.py
src/option_hedging/evaluation/: __init__.py  hedging_metrics.py
src/option_hedging/models/: __init__.py  signal_volatility.py  volatility.py
src/option_hedging/signals/: __init__.py  base.py  definitions.py  library.py  targets.py  transforms.py  validation.py
src/option_hedging/strategies/: __init__.py  delta_hedging.py  market_signal_delta.py
tests/: test_backtesting.py  test_black_scholes.py  test_delta_hedging.py  test_market_data.py  test_market_signal_delta.py  test_signal_volatility.py  test_signals.py  test_volatility.py
