[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "option-hedging"
version = "0.1.0"
description = "Dynamic volatility modeling and delta hedging of European options"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.12",
    "yfinance>=0.2.40",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
